# docs/swagger.json
@@ -12,7 +12,47 @@
     "host": "localhost:8080",
     "basePath": "/api/",
     "paths": {
-        "/apply": {
+        "/coupon": {
+            "post": {
+                "description": "Creates a new coupon with the specified code, discount, and minimum basket value",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "coupons"
+                ],
+                "summary": "Create a new coupon",
+                "parameters": [
+                    {
+                        "description": "Coupon details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_api.CreateCouponRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Error"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/coupon/validation": {
             "post": {
                 "description": "Applies a coupon code to a given basket value and returns the result or error",
                 "consumes": [
@@ -100,46 +140,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/create": {
-            "post": {
-                "description": "Creates a new coupon with the specified code, discount, and minimum basket value",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "coupons"
-                ],
-                "summary": "Create a new coupon",
-                "parameters": [
-                    {
-                        "description": "Coupon details",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_api.CreateCouponRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.Error"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/pkg.Error"
                         }
